[workspace]
resolver = "2"
members = [
    "crates/lumenqraph-core",
    "crates/lumenqraph-indexer",
    "crates/lumenqraph-api",
    "crates/lumenqraph-webhooks",
    "crates/lumenqraph-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Lumen-Scribe/Lumenqraph"

# Shared dependency versions — pinned once, referenced by each crate with
# `<dep>.workspace = true` so the indexer (writer) and api (reader) never drift.
[workspace.dependencies]
lumenqraph-core = { path = "crates/lumenqraph-core" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "json",
    "migrate",
    "uuid",
] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
# Pinned to the 7.0.x line that targets axum 0.7 (7.0.11+ moved to axum 0.8,
# which would clash with the rest of the stack).
async-graphql = { version = "=7.0.7", features = ["chrono"] }
async-graphql-axum = "=7.0.7"
# Canonical Stellar XDR types. Used ONLY on the cold, once-per-contract spec /
# ledger-entry path (parsing a contract's on-chain interface). The hot event
# decode path stays dependency-free in `lumenqraph-core::xdr`.
stellar-xdr = { version = "23", default-features = false, features = [
    "std",
    "curr",
    "base64",
] }

[profile.release]
opt-level = 3
lto = "thin"
