[package]
name = "lumenqraph-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumenqraph-api"
path = "src/main.rs"

[dependencies]
lumenqraph-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
rand = "0.8"
base64 = "0.22"
