[package]
name = "lumenqraph-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
uuid.workspace = true
stellar-xdr.workspace = true
hex.workspace = true
base64 = "0.22"
