[package]
name = "lumenqraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumenqraph-mcp"
path = "src/main.rs"

[dependencies]
lumenqraph-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
reqwest.workspace = true
hex.workspace = true
chrono.workspace = true
